implemened account activation token, user_invitations table and user/activate handler
